[package]
name = "frombytes"
version = "0.1.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Defines a cursor over a slice of bytes."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "network-programming", "parsing"]
include = ["src/lib.rs", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1", optional = true }

[features]
default = ["std"]
std = ["thiserror"]
